# DocumentsSystemOCR

backend/: .env  Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/admin_danhsachvanban/: api_danhsachvanban.rs  mod.rs
backend/src/api/admin_qlvbocr/: api_qlvbocr.rs  mod.rs
backend/src/api/admin_quanlycoquan/: api_admin_quanlycoquan.rs  db_admin_quanlycoquan.rs  mod.rs  model_admin_quanlycoquan.rs
backend/src/api/admin_quanlyloaivanban/: api_quanlyloaivanban.rs  db_quanlyloaivanban.rs  mod.rs  model_quanlyloaivanban.rs
backend/src/api/admin_quanlytaikhoan/: api_admin_account.rs  db_admin_account.rs  mod.rs  model_admin_account.rs
backend/src/api/admin_quanlyvanbanden/: api_quanlyvanbanden.rs  db_quanlyvanbanden.rs  mod.rs  model_quanlyvanbanden.rs
backend/src/api/admin_thongke/: api_thongke.rs  mod.rs
backend/src/api/admin_thuoctinhvanban/: api_thuoctinhvanban.rs  mod.rs
backend/src/api/dangky/: api_dangky.rs  db_dangky.rs  mod.rs  model_dangky.rs
backend/src/api/dangnhap/: api_dangnhap.rs  db_dangnhap.rs  mod.rs  model_dangnhap.rs
backend/src/api/dinhkemfile/: api_dinhkemfile.rs  db_dinhkemfile.rs  mod.rs  model_dinhkemfile.rs
backend/src/api/goiytimkiem/: api_goiytimkiem.rs  db_goiytimkiem.rs  mod.rs  model_goiytimkiem.rs
backend/src/api/hiennguoidung/: test.rs
backend/src/api/quenmatkhau/: api_quenmatkhau.rs  mod.rs
backend/src/api/thuoctinhvanban/: api_thuoctinhvanban.rs  db_thuoctinhvanban.rs  (+1 more)
backend/src/configs/: connect.rs
backend/src/db/: mod.rs
backend/src/routes/: main.rs
(+37 files in other folders)
