[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenv = "0.15.0"
serde_json = "1.0.140"
tera = "1"
mysql = "24.0"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
actix-files = "0.6"
chrono = { version = "0.4", features = ["serde"] }
webbrowser = "0.8"
actix-multipart = "0.4"
futures-util = "0.3"
actix-cors = "0.6"


[lib]
crate-type = ["cdylib", "rlib"]
name = "backend_lib"  # Tên thư viện (thường là tên project)
path = "src/lib.rs"